Add Django ORM backend with storage interface and models
- Create storage base classes (Thread, Run, Message, ToolCall, Event storage)
- Implement Django ORM models for AG-UI protocol
- Add DjangoStorageBackend implementation
- Include file storage support for media uploads
- Add database indexes for performance
- Create initial migration

All tests pass (22/22)

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -32,6 +32,7 @@ dependencies = [
     "django>=4.2",
     "ag-ui-protocol>=0.1.0",
     "pydantic>=2.0",
+    "asgiref>=3.7",
 ]
 
 [project.optional-dependencies]
