feat: Add frontend playground with React, Tailwind, and shadcn/ui
- Add Vite + React frontend project with Tailwind CSS v4
- Add shadcn/ui components (Button, Avatar, Select, DropdownMenu, Textarea)
- Add theme provider with light/dark/system mode toggle
- Add useAGUIChat hook for SSE streaming and event parsing
- Add chat UI components (MessageList, ChatInput, ToolCallList, Sidebar)
- Add django-vite configuration for frontend integration
- Add playground views for thread management (DB or in-memory)
- Add playground.html template with django-vite tags
- Add theme toggle with beautiful dropdown menu
- Mobile-first responsive design with sidebar

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -45,6 +45,9 @@ ninja = [
 bolt = [
     "django-bolt>=0.3",
 ]
+vite = [
+    "django-vite>=3.0",
+]
 langgraph = [
     "langgraph>=0.2.0",
     "langchain-openai>=0.1",
